--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-router": "^6.3.0",
@@ -49,5 +50,3 @@
     ]
   }
 }
-
-
